[package]
name = "monero"
version = "0.16.0"
authors = ["Monero Rust Contributors", "h4sh3d <h4sh3d@protonmail.com>"]
documentation = "https://docs.rs/monero"
homepage = "https://github.com/monero-rs/monero-rs"
include = [
  "src/*",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
keywords = ["monero"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/monero-rs/monero-rs"
description = "Rust Monero Library."

edition = "2018"

[features]
default = ["full"]
full = ["fixed-hash/std", "fixed-hash/rand"]
serde_support = ["serde", "serde-big-array", "curve25519-dalek/serde"]
experimental = []

[dependencies]
base58-monero = { version = "0.3", default-features = false }
curve25519-dalek = { version = "3.0.2" }
hex = "0.4.3"
hex-literal = "0.3.1"
sealed = "0.3"
serde = { version = "1.0.124", features = ["derive"], optional = true }
serde-big-array = { version = "0.3.2", optional = true }
thiserror = "1.0.24"
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
serde_json = "<1.0.82"
serde_test = "1"

[dependencies.fixed-hash]
version = "0.7.0"
default-features = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
