[package]
name = "monero"
version = "0.19.0"
authors = ["Monero Rust Contributors", "h4sh3d <h4sh3d@protonmail.com>"]
documentation = "https://docs.rs/monero"
edition = "2021"
homepage = "https://github.com/monero-rs/monero-rs"
include = [
  "src/*",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
keywords = ["monero"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/monero-rs/monero-rs"
rust-version = "1.63.0"
description = "Rust Monero Library."

[features]
default = ["full"]
full = ["fixed-hash/std", "fixed-hash/rand"]
serde = ["serde-crate", "serde-big-array", "curve25519-dalek/serde"]
experimental = []

[dependencies]
base58-monero = { version = "2" }
curve25519-dalek = { version = "4" }
hex = "0.4.3"
hex-literal = "0.4.1"
sealed = "0.5"
serde-big-array = { version = "0.5.1", optional = true }
serde-crate = { package = "serde", version = "1", features = ["derive"], optional = true }
thiserror = "1.0.24"
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
serde_json = "1"
serde_test = "1"
rand = "0.8"
quickcheck = "1"

[dependencies.fixed-hash]
version = "0.8.0"
default-features = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
